syntax = "proto3";

option go_package = "github.com/Kidr1cE/golang-oj-worker/proto/grpc";

// HealthCheck
message HealthCheckRequest {}
message HealthCheckResponse {
    bool status = 1;
}

// GetDockerStatus
message GetStatusRequest{}
message GetStatusResponse{
    bool status = 1;
    string message = 2;
}

// SetEnv
message SetEnvRequest {
    bool raw = 1;
    string image_name = 2;
    bytes dockerfile = 3;
}
message SetEnvResponse {
    bool status = 1;
    string message = 2;
}

// SendRequirements
message FileChunk {
    string filename = 1;
    bytes content = 2;
    bool is_last_chunk = 3;
}
message UploadStatus {
    bool success = 1;
    string message = 2;
}

service Sandbox {
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}
    rpc GetDockerStatus(GetStatusRequest) returns (GetStatusResponse) {}
    rpc SetEnv(SetEnvRequest) returns (SetEnvResponse) {}
    rpc SendRequirements(stream FileChunk) returns (stream UploadStatus) {}
}
